Move Test and Example projects transitively requiring Java-25 to Java-25
And use unnamed variables to avoid warnings about unused parameters.